--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: 🚀 Deploy Laravel to Hostinger (via LFTP)
+name: 🚀 Deploy Laravel to Hostinger (Metode Stabil)
 
 on:
   push:
@@ -43,39 +43,22 @@ jobs:
         php artisan route:cache
         php artisan view:cache
         
-    # 7. Hapus file yang tidak perlu di-upload
-    - name: 🧹 Clean up files
-      run: |
-        rm -rf .git
-        rm -rf .github
-        rm -f .gitignore
-
-    # 8. Deploy menggunakan LFTP (Metode Baru yang Lebih Tangguh)
-    - name: ⬆️ Deploy files via LFTP
-      # --- PERBAIKAN: Nama action yang benar adalah lftp-action ---
-      uses: web-server-deploy/lftp-action@v1.4
+    # 7. Deploy menggunakan FTP (Kembali ke metode awal DENGAN PERBAIKAN)
+    - name: ⬆️ Deploy files via FTP
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: ftp://${{ secrets.FTP_SERVER }}
-        user: ${{ secrets.FTP_USERNAME }}
+        server: ${{ secrets.FTP_SERVER }}
+        username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
+        server-dir: /public_html/
         
-        # Opsi LFTP:
-        # --delete: Menghapus file di server yg tidak ada di repo
-        # --mirror: Sinkronisasi (hanya upload yg berubah)
-        # --parallel=5: Upload 5 file sekaligus (lebih cepat)
-        # --verbose: Tampilkan log lengkap
-        # --exclude: File/folder yg tidak perlu di-upload
-        lftp-options: >
-          -e "set ftp:ssl-allow no;
-          set cmd:fail-exit yes;
-          set net:timeout 10;
-          set net:max-retries 2;
-          set net:reconnect-interval-base 5;
-          mirror --delete --parallel=5 --verbose
-          --exclude .git/ --exclude .github/ --exclude .gitignore
-          ."
-          
-        # 'local-dir' adalah sumber (semua file di runner)
-        # 'server-dir' adalah tujuan di Hostinger
-        local-dir: "."
-        server-dir: "/public_html/"
+        # --- Perbaikan untuk koneksi Hostinger ---
+        dangerous-clean-slate: true
+        ftp-legacy: true # <-- Ini adalah parameter yang BENAR
+        
+        exclude: |
+          **/.git*
+          **/.git*/**
+          **/node_modules/**
+          **/.github/**
+          .gitignore
