--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: 🚀 Deploy Laravel to Hostinger (Metode LFTP Cepat)
+name: 🚀 Deploy Laravel to Hostinger (Metode Cepat)
 
 on:
   push:
@@ -22,7 +22,7 @@ jobs:
         extensions: mbstring, dom, curl, json, pdo, pdo_mysql
         tools: composer
       env:
-        COMPOSCOM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     # 3. Instal semua dependency (BUAT FOLDER VENDOR)
     - name: 📦 Install Composer Dependencies
@@ -44,25 +44,26 @@ jobs:
         php artisan route:cache
         php artisan view:cache
         
-    # 7. Deploy menggunakan LFTP (Action yang Cepat dan Terpercaya)
-    - name: ⬆️ Deploy files via LFTP
-      # --- INI ADALAH ACTION YANG BENAR ---
-      uses: Git-Actions/lftp-action@v1.1.2
+    # 7. Deploy menggunakan 'appleboy/ftp-action' (Cepat & Terverifikasi)
+    - name: ⬆️ Deploy files via FTP (Parallel)
+      # --- INI ADALAH ACTION YANG BENAR (TANPA 'l' DI 'ftp') ---
+      uses: appleboy/ftp-action@master
       with:
         host: ${{ secrets.FTP_SERVER }}
-        user: ${{ secrets.FTP_USERNAME }}
+        username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        remote_root: /public_html/
-        local_root: "."
-        # Opsi LFTP:
-        # mirror: Sinkronisasi
-        # --delete: Hapus file di server yg tidak ada di repo
-        # --reverse: Upload (dari lokal ke remote)
-        # --verbose: Tampilkan log
-        # --parallel=5: Upload 5 file sekaligus (JAUH LEBIH CEPAT)
-        # --exclude: Folder yg tidak perlu di-upload
-        options: >
-          mirror --delete --reverse --verbose --parallel=5
-          --exclude .git* --exclude .github/ 
-          --exclude node_modules/ 
-          --exclude vendor/laravel/sail/
+        port: 21
+        source: "." # Mulai dari root proyek
+        target: "/public_html/" # Tujuan di Hostinger
+        
+        # --- Kunci untuk Kecepatan ---
+        parallel: 10  # Upload 10 file sekaligus (jauh lebih cepat)
+        delete: true  # Hapus file lama di server
+        
+        exclude: |
+          .git*
+          .github/
+          node_modules/
+          vendor/laravel/sail/
+
+
