--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: 🚀 Deploy Laravel to Hostinger (Metode Cepat)
+name: 🚀 Deploy Laravel to Hostinger (Metode LFTP Cepat)
 
 on:
   push:
@@ -22,7 +22,7 @@ jobs:
         extensions: mbstring, dom, curl, json, pdo, pdo_mysql
         tools: composer
       env:
-        COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        COMPOSCOM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     # 3. Instal semua dependency (BUAT FOLDER VENDOR)
     - name: 📦 Install Composer Dependencies
@@ -44,26 +44,33 @@ jobs:
         php artisan route:cache
         php artisan view:cache
         
-    # 7. Deploy menggunakan 'appleboy/ftp-action' (Cepat & Terverifikasi)
-    - name: ⬆️ Deploy files via FTP (Parallel)
-      # --- INI ADALAH ACTION YANG BENAR (TANPA 'l' DI 'ftp') ---
-      uses: appleboy/ftp-action@master
+    # 7. Deploy menggunakan LFTP (Action dari haukurh)
+    - name: ⬆️ Deploy files via LFTP (Action dari haukurh)
+      # --- Menggunakan action yang Anda temukan ---
+      uses: haukurh/lftp-action@v2
       with:
-        host: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
-        port: 21
-        source: "." # Mulai dari root proyek
-        target: "/public_html/" # Tujuan di Hostinger
-        
-        # --- Kunci untuk Kecepatan ---
-        parallel: 10  # Upload 10 file sekaligus (jauh lebih cepat)
-        delete: true  # Hapus file lama di server
-        
-        exclude: |
-          .git*
-          .github/
-          node_modules/
-          vendor/laravel/sail/
+        server: ${{ secrets.FTP_SERVER }}
+        #Perintah LFTP:
+        #set ftp:ssl-allow no; -> (Keamanan) Izinkan koneksi non-SSL
+        # set net:max-retries 3; -> Coba lagi 3x jika gagal
+        # mirror --delete --reverse --verbose --parallel=5 -> Perintah inti
+        #   --delete: Hapus file lama di server
+        #   --reverse: Upload (lokal ke remote)
+        #   --verbose: Tampilkan log
+        #   --parallel=5: Upload 5 file sekaligus (KUNCI KECEPATAN)
+        #   --exclude: File/folder yang diabaikan
+        #   ".": Sumber (lokal)
+        #   "/public_html/": Tujuan (remote)
+        args: |
+          set ftp:ssl-allow no;
+          set net:max-retries 3;
+          mirror --delete --reverse --verbose --parallel=5 \
+          --exclude .git* \
+          --exclude .github/ \
+          --exclude node_modules/ \
+          --exclude vendor/laravel/sail/ \
+          "." "/public_html/"
 
 
