--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,59 +3,54 @@ name: 🚀 Deploy Laravel to Hostinger (Metode LFTP Cepat)
 on:
   push:
     branches:
-      - main  # Ganti 'main' jika branch utama Anda 'master'
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+
     steps:
-      
-    # 1. Mengambil kode dari repository
-    - name: ⬇️ Check out repository
-      uses: actions/checkout@v4
+      - name: ⬇️ Check out repository
+        uses: actions/checkout@v4
 
-    # 2. Setup PHP
-    - name: ⚙️ Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.3' # Sesuaikan dengan versi PHP di Hostinger
-        extensions: mbstring, dom, curl, json, pdo, pdo_mysql
-        tools: composer
-      env:
-        COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: ⚙️ Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+          extensions: mbstring, dom, curl, json, pdo, pdo_mysql
+          tools: composer
+        env:
+          COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    # 3. Instal semua dependency (BUAT FOLDER VENDOR)
-    - name: 📦 Install Composer Dependencies
-      run: composer install --no-dev --no-interaction --optimize-autoloader
+      - name: 📦 Install Composer Dependencies
+        run: composer install --no-dev --no-interaction --optimize-autoloader
 
-    # 4. Buat file .env dari GitHub Secret
-    - name: 📝 Create .env file
-      run: echo "${{ secrets.ENV_FILE }}" > .env
-      
-    # 5. Buat Kunci Aplikasi Laravel
-    - name: 🔑 Generate Laravel App Key
-      run: php artisan key:generate --force
-      
-    # 6. Optimasi Laravel untuk produksi
-    - name: ⚡ Optimize Laravel
-      run: |
-        php artisan config:cache
-        php artisan route:cache
-        php artisan view:cache
-        
-    # 7. Deploy menggunakan LFTP (Action dari haukurh)
-    - name: ⬆️ Deploy files via LFTP (Action dari haukurh)
-      uses: haukurh/lftp-action@v1
-      with:
-        # --- MENGGUNAKAN NAMA PARAMETER YANG BENAR (DARI LOG ANDA) ---
-        ftp_host: ${{ secrets.FTP_SERVER }}
-        ftp_user: ${{ secrets.FTP_USERNAME }}
-        ftp_pass: ${{ secrets.FTP_PASSWORD }}
-        
-        # --- 'script' diubah menjadi 'commands' ---
-        commands: |
-          set ftp:ssl-allow no;
-          set net:max-retries 3;
-          mirror --delete --reverse --verbose --parallel=5 --exclude .git* --exclude .github/ --exclude node_modules/ --exclude vendor/laravel/sail/ "." "/public_html/"
+      - name: 📝 Create .env file
+        run: echo "${{ secrets.ENV_FILE }}" > .env
 
+      - name: 🔑 Generate Laravel App Key
+        run: php artisan key:generate --force
 
+      - name: ⚡ Optimize Laravel
+        run: |
+          php artisan config:cache
+          php artisan route:cache
+          php artisan view:cache
+
+      - name: ⬆️ Deploy files via LFTP
+        uses: haukurh/lftp-action@v1
+        with:
+          ftp_host: ${{ secrets.FTP_SERVER }}
+          ftp_user: ${{ secrets.FTP_USERNAME }}
+          ftp_pass: ${{ secrets.FTP_PASSWORD }}
+          commands: |
+            set sftp:auto-confirm yes
+            set net:max-retries 3
+            set ftp:ssl-allow no
+            mirror -R --delete --verbose --parallel=5 \
+              --exclude-glob .git* \
+              --exclude-glob .github/ \
+              --exclude-glob node_modules/ \
+              --exclude-glob vendor/laravel/sail/ \
+              ./ domains/bulelengcreativehub.id/public_html/
+            bye
