--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,56 +1,65 @@
-name: 🚀 Deploy Laravel to Hostinger (LFTP Stabil)
+name: 🚀 Deploy Laravel ke Hostinger (LFTP - SFTP Mode)
 
 on:
   push:
     branches:
-      - main
+      - main  # Jalankan otomatis setiap push ke branch 'main'
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: ⬇️ Check out repository
+      # 1. Ambil kode dari repository
+      - name: 🧱 Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Setup PHP environment
       - name: ⚙️ Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.3'
+          php-version: '8.3' # Sesuaikan dengan versi di Hostinger
           extensions: mbstring, dom, curl, json, pdo, pdo_mysql
           tools: composer
         env:
           COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # 3. Install dependency Laravel (tanpa dev)
       - name: 📦 Install Composer Dependencies
         run: composer install --no-dev --no-interaction --optimize-autoloader
 
+      # 4. Generate file .env dari Secret GitHub
       - name: 📝 Create .env file
         run: echo "${{ secrets.ENV_FILE }}" > .env
 
+      # 5. Generate App Key Laravel
       - name: 🔑 Generate Laravel App Key
-        run: php artisan key:generate --force
+        run: php artisan key:generate
 
+      # 6. Optimasi Laravel untuk Produksi
       - name: ⚡ Optimize Laravel
         run: |
           php artisan config:cache
           php artisan route:cache
           php artisan view:cache
 
-      - name: ⬆️ Deploy files via LFTP
+      # 7. Deploy via LFTP (SFTP Mode)
+      - name: ⬆️ Deploy files via LFTP (SFTP Mode)
         uses: haukurh/lftp-action@v1
         with:
-          ftp_host: ${{ secrets.FTP_SERVER }}
+          ftp_host: sftp://${{ secrets.FTP_SERVER }}
           ftp_user: ${{ secrets.FTP_USERNAME }}
           ftp_pass: ${{ secrets.FTP_PASSWORD }}
-          commands: >
+          commands: |
             set sftp:auto-confirm yes;
             set net:max-retries 3;
+            set net:timeout 30;
             set ftp:ssl-allow no;
-            mirror -R --delete --verbose --parallel=5
-            --exclude-glob .git* 
-            --exclude-glob .github/
-            --exclude-glob node_modules/
-            --exclude-glob vendor/laravel/sail/
-            ./ domains/bulelengcreativehub.id/public_html/;
+            set xfer:clobber yes;
+            mirror --reverse --delete --verbose --parallel=3 \
+              --exclude-glob .git* \
+              --exclude-glob .github/ \
+              --exclude-glob node_modules/ \
+              --exclude-glob vendor/laravel/sail/ \
+              ./ /public_html/;
             bye;
