--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,6 +59,6 @@ jobs:
               --exclude-glob .github/ \
               --exclude-glob node_modules/ \
               --exclude-glob vendor/laravel/sail/ \
-              ./ /public_html/;
+              ./ /domains/bulelengcreativehub.id/public_html/;
             bye
           "
